# CPU_Ray_Tracing_Renderer

./: BVH.hpp  CMakeLists.txt  aabb.hpp  camera.hpp  camera_settings.txt  global_settings.txt  hittable.hpp  hittable_list.hpp  main.cpp  material.hpp  ppmWrite.hpp  ray.hpp  scene.txt  sphere.hpp  texture.hpp  triangle.hpp  utility.hpp
glm/: glm.hpp
